chore(pom.xml) add args during compiling